--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "chart.js": "^3.5.1",
     "luxon": "^2.0.2",
     "react": "^17.0.2",
@@ -45,5 +46,6 @@
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
