:sparkles: Auth using passport js

--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,3 +1,4 @@
-NODE_ENV=production
+NODE_ENV=devlopment
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+JWT_SECRET=6jDS6XtxbF}mMeX_2p4*;)V_r4YErc
