--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "chart.js": "^3.5.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^2.0.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
