--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
     "postcss": "^7.0.38",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://immense-wave-22705.herokuapp.com/"
 }
