--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "craco test",
     "backend": "cd backend && npm start",
     "eject": "react-scripts eject",
-    "dev": "concurrently -n \"server,client\" -c \"blue,green\" \"npm start\" \"npm run backend\""
+    "dev": "concurrently -n \"client,server\" -c \"blue,green\" \"npm start\" \"npm run backend\""
   },
   "eslintConfig": {
     "extends": [
